implement moods generator